--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ deps =
     flake8
     pytest
 commands =
-    check-manifest --ignore 'tox.ini,tests/**,.vscode/**,venv/**,.pre-commit-config.yaml'
+    check-manifest --ignore 'tox.ini,tests/**,.vscode/**,venv/**,.pre-commit-config.yaml,.pylintrc'
     python -m build
     flake8 .
     py.test tests {posargs}
